// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Direksi QCPortal (snapshot) > renders empty pending audits state and matches snapshot 1`] = `
<div
  class="w-full h-full animate-[fadeIn_0.3s_ease-out]"
>
  <div
    class="min-h-[calc(100vh-var(--page-py)-var(--page-pb))]"
  >
    <header
      class="flex justify-between items-center border-b border-slate-100 pb-3 mb-[var(--section-gap)]"
      style="margin-bottom: var(--section-gap);"
    >
      <div>
        <h1
          class="text-dashboard-title uppercase"
        >
          Lab Audit
           
          <span
            class="text-status-action"
          >
            Terminal
          </span>
        </h1>
        <p
          class="font-bold text-slate-400 tracking-tight mt-1.5"
          style="font-size: var(--module-subtitle-size);"
        >
          QC Pass-Fail Certification Center
        </p>
      </div>
    </header>
    <div
      class="flex flex-col"
      style="gap: var(--section-gap);"
    >
      <div
        class="grid grid-cols-3 gap-8 mb-6"
      >
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-emerald-300 dark:border-emerald-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pending Audits
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-emerald-600 dark:text-emerald-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-emerald-500 rounded-full"
                    style="width: 100%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-emerald-600 dark:text-emerald-400"
                >
                  100
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-emerald-50 text-emerald-500 dark:bg-emerald-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clipboard-check"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="4"
                    rx="1"
                    ry="1"
                    width="8"
                    x="8"
                    y="2"
                  />
                  <path
                    d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="m9 14 2 2 4-4"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pass Rate
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                50%
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-target"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="2"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Daily Completed
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                —
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-calendar"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2v4"
                  />
                  <path
                    d="M16 2v4"
                  />
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="4"
                  />
                  <path
                    d="M3 10h18"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 gap-8"
      >
        <div
          class="rounded-2xl border text-slate-900 shadow-sm border-gray-200 bg-white"
        >
          <div
            class="space-y-1.5 p-5 border-b border-slate-100 text-left flex flex-row items-center justify-between"
          >
            <div>
              <h3
                class="text-[16px] leading-snug font-bold text-slate-900 uppercase tracking-tighter flex items-center"
                style="font-size: 14px;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clipboard-check mr-2 h-5 w-5 text-emerald-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="4"
                    rx="1"
                    ry="1"
                    width="8"
                    x="8"
                    y="2"
                  />
                  <path
                    d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="m9 14 2 2 4-4"
                  />
                </svg>
                 STAGE INSPECTION INBOX
              </h3>
              <p
                class="text-[12px] font-normal leading-relaxed text-zinc-500"
              >
                Live feed from the production floor - Waiting for verification.
              </p>
            </div>
            <span
              class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-amber-50 text-amber-600 border-amber-100"
            >
              0
               PENDING AUDITS
            </span>
          </div>
          <div
            class="p-5"
          >
            <div
              class="rounded-xl border border-gray-200 overflow-hidden"
            >
              <table
                class="w-full text-left border-collapse"
              >
                <thead
                  class="dark:bg-[#111827]/90 border-b border-slate-200 dark:border-slate-800 text-[11px] leading-[16px] font-bold uppercase tracking-wider text-slate-700 dark:text-slate-300 h-[40px] bg-gray-50"
                >
                  <tr
                    class="hover:bg-slate-50/80 dark:hover:bg-slate-800/40 transition-colors h-[42px] border-[var(--border-color)]"
                  >
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider dark:text-slate-300 select-none text-table-header"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Batch Registry
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider dark:text-slate-300 select-none text-table-header"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Completed Stage
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider dark:text-slate-300 select-none text-table-header text-right"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Yield (Good)
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider dark:text-slate-300 select-none text-table-header text-right"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Operational Status
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider text-slate-600 dark:text-slate-300 select-none w-[100px]"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span />
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="divide-y divide-slate-100 dark:divide-slate-800/80 text-[12px] leading-[18px]"
                >
                  <tr
                    class="hover:bg-slate-50/80 dark:hover:bg-slate-800/40 transition-colors h-[42px]"
                  >
                    <td
                      class="px-3.5 text-[12px] text-slate-800 dark:text-slate-200 font-medium text-center py-24"
                      colspan="5"
                    >
                      <p
                        class="text-zinc-800 font-black text-3xl uppercase tracking-tight italic opacity-20"
                      >
                        No Lab Pending Jobs
                      </p>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Direksi QCPortal (snapshot) > renders pending audits table and matches snapshot 1`] = `
<div
  class="w-full h-full animate-[fadeIn_0.3s_ease-out]"
>
  <div
    class="min-h-[calc(100vh-var(--page-py)-var(--page-pb))]"
  >
    <header
      class="flex justify-between items-center border-b border-slate-100 pb-3 mb-[var(--section-gap)]"
      style="margin-bottom: var(--section-gap);"
    >
      <div>
        <h1
          class="text-dashboard-title uppercase"
        >
          Lab Audit
           
          <span
            class="text-status-action"
          >
            Terminal
          </span>
        </h1>
        <p
          class="font-bold text-slate-400 tracking-tight mt-1.5"
          style="font-size: var(--module-subtitle-size);"
        >
          QC Pass-Fail Certification Center
        </p>
      </div>
    </header>
    <div
      class="flex flex-col"
      style="gap: var(--section-gap);"
    >
      <div
        class="grid grid-cols-3 gap-8 mb-6"
      >
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pending Audits
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                2
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 0%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  0
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clipboard-check"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="4"
                    rx="1"
                    ry="1"
                    width="8"
                    x="8"
                    y="2"
                  />
                  <path
                    d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="m9 14 2 2 4-4"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pass Rate
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                0%
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 0%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  0
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-target"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="2"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Daily Completed
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                —
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-calendar"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2v4"
                  />
                  <path
                    d="M16 2v4"
                  />
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="4"
                  />
                  <path
                    d="M3 10h18"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 gap-8"
      >
        <div
          class="rounded-2xl border text-slate-900 shadow-sm border-gray-200 bg-white"
        >
          <div
            class="space-y-1.5 p-5 border-b border-slate-100 text-left flex flex-row items-center justify-between"
          >
            <div>
              <h3
                class="text-[16px] leading-snug font-bold text-slate-900 uppercase tracking-tighter flex items-center"
                style="font-size: 14px;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-clipboard-check mr-2 h-5 w-5 text-emerald-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="4"
                    rx="1"
                    ry="1"
                    width="8"
                    x="8"
                    y="2"
                  />
                  <path
                    d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
                  />
                  <path
                    d="m9 14 2 2 4-4"
                  />
                </svg>
                 STAGE INSPECTION INBOX
              </h3>
              <p
                class="text-[12px] font-normal leading-relaxed text-zinc-500"
              >
                Live feed from the production floor - Waiting for verification.
              </p>
            </div>
            <span
              class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-amber-50 text-amber-600 border-amber-100"
            >
              2
               PENDING AUDITS
            </span>
          </div>
          <div
            class="p-5"
          >
            <div
              class="rounded-xl border border-gray-200 overflow-hidden"
            >
              <table
                class="w-full text-left border-collapse"
              >
                <thead
                  class="dark:bg-[#111827]/90 border-b border-slate-200 dark:border-slate-800 text-[11px] leading-[16px] font-bold uppercase tracking-wider text-slate-700 dark:text-slate-300 h-[40px] bg-gray-50"
                >
                  <tr
                    class="hover:bg-slate-50/80 dark:hover:bg-slate-800/40 transition-colors h-[42px] border-[var(--border-color)]"
                  >
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider dark:text-slate-300 select-none text-table-header"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Batch Registry
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider dark:text-slate-300 select-none text-table-header"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Completed Stage
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider dark:text-slate-300 select-none text-table-header text-right"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Yield (Good)
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider dark:text-slate-300 select-none text-table-header text-right"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Operational Status
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider text-slate-600 dark:text-slate-300 select-none w-[100px]"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span />
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="divide-y divide-slate-100 dark:divide-slate-800/80 text-[12px] leading-[18px]"
                >
                  <tr
                    class="dark:hover:bg-slate-800/40 transition-colors h-[42px] border-[var(--border-color)] hover:bg-gray-50"
                  >
                    <td
                      class="py-2 px-3.5 text-[12px] dark:text-slate-200 font-semibold text-gray-900"
                    >
                      BATCH-QC-001
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] text-slate-800 dark:text-slate-200 font-medium"
                    >
                      <span
                        class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-slate-50 text-slate-600 border-slate-100"
                      >
                        MIXING
                      </span>
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] dark:text-slate-200 text-right font-semibold text-gray-700 tabular-nums"
                    >
                      950
                       Units
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] text-slate-800 dark:text-slate-200 font-medium text-right"
                    >
                      <span
                        class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-amber-50 text-amber-600 border-amber-100"
                      >
                        WAITING AUDIT
                      </span>
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] text-slate-800 dark:text-slate-200 font-medium text-right"
                    >
                      <button
                        class="inline-flex items-center justify-center gap-2 tracking-wider transition-all border-none shadow-sm hover:shadow-md h-8 px-3 bg-white text-slate-700 border border-[var(--border-color)] hover:bg-emerald-500 hover:text-white font-bold text-[10px] uppercase rounded-lg"
                        type="button"
                      >
                        INSPECT
                      </button>
                    </td>
                  </tr>
                  <tr
                    class="dark:hover:bg-slate-800/40 transition-colors h-[42px] border-[var(--border-color)] hover:bg-gray-50"
                  >
                    <td
                      class="py-2 px-3.5 text-[12px] dark:text-slate-200 font-semibold text-gray-900"
                    >
                      BATCH-QC-001
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] text-slate-800 dark:text-slate-200 font-medium"
                    >
                      <span
                        class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-slate-50 text-slate-600 border-slate-100"
                      >
                        PACKAGING
                      </span>
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] dark:text-slate-200 text-right font-semibold text-gray-700 tabular-nums"
                    >
                      920
                       Units
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] text-slate-800 dark:text-slate-200 font-medium text-right"
                    >
                      <span
                        class="inline-flex items-center gap-1.5 text-[10px] font-black uppercase rounded-lg px-3 py-1 border shadow-sm bg-[#FEF2F2] text-[#DC2626] border-[#FECDD3]"
                      >
                        FAIL RETRY
                      </span>
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] text-slate-800 dark:text-slate-200 font-medium text-right"
                    >
                      <button
                        class="inline-flex items-center justify-center gap-2 tracking-wider transition-all border-none shadow-sm hover:shadow-md h-8 px-3 bg-white text-slate-700 border border-[var(--border-color)] hover:bg-emerald-500 hover:text-white font-bold text-[10px] uppercase rounded-lg"
                        type="button"
                      >
                        INSPECT
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
